trigger refresh of modified on disk message if the type did change

e.g. for

touch test
kate test
rm test
touch test

BUG: 504150